add front office

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11251,6 +11251,51 @@ body {
   font-family: "Playfair Display", serif;
 }
 
+div#guest-wrapper {
+  background-color: #fff;
+  color: #636b6f;
+  font-family: "Nunito", sans-serif;
+  font-weight: 200;
+  height: 100vh;
+  margin: 0;
+}
+div#guest-wrapper .full-height {
+  height: 100vh;
+}
+div#guest-wrapper .flex-center {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+div#guest-wrapper .position-ref {
+  position: relative;
+}
+div#guest-wrapper .top-right {
+  position: absolute;
+  right: 10px;
+  top: 18px;
+}
+div#guest-wrapper .content {
+  text-align: center;
+}
+div#guest-wrapper .title {
+  font-size: 84px;
+}
+
+.links > a {
+  color: #636b6f;
+  padding: 0 25px;
+  font-size: 13px;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.m-b-md {
+  margin-bottom: 30px;
+}
+
 #categories-wrapper table th a, #categories-wrapper table td a {
   text-decoration: none;
   color: black;
