add logo to navbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11251,6 +11251,10 @@ body {
   font-family: "Playfair Display", serif;
 }
 
+img#medium-logo {
+  width: 200px;
+}
+
 div#guest-wrapper {
   background-color: #fff;
   color: #636b6f;
