--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,13 +11,17 @@ body {
     font-family: $font-family;
 }
 
+img#medium-logo {
+    width: 200px;
+}
+
 div#guest-wrapper {
         background-color: #fff;
         color: #636b6f;
         font-family: 'Nunito', sans-serif;
         font-weight: 200;
         height: 100vh;
-        margin: 0; 
+        margin: 0;
 
     .full-height {
         height: 100vh;
