try to solve Uncaught Error

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,18 +23,9 @@ div#guest-wrapper {
         height: 100vh;
         margin: 0;
 
-    .full-height {
-        height: 100vh;
-    }
-
-    .flex-center {
-        align-items: center;
-        display: flex;
-        justify-content: center;
-    }
-
-    .position-ref {
-        position: relative;
+    div#guest-logo {
+        width: 300px;
+        
     }
 
     .top-right {
