--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11263,16 +11263,8 @@ div#guest-wrapper {
   height: 100vh;
   margin: 0;
 }
-div#guest-wrapper .full-height {
-  height: 100vh;
-}
-div#guest-wrapper .flex-center {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-div#guest-wrapper .position-ref {
-  position: relative;
+div#guest-wrapper div#guest-logo {
+  width: 300px;
 }
 div#guest-wrapper .top-right {
   position: absolute;
